# dzieja

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/modules/: AddDzieja.cmake
docs/: concept.md  specification.md
include/dzieja/Basic/: TokenKinds.def  TokenKinds.h  Version.inc.in
include/dzieja/Lex/: Lexer.h  Token.h
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  TokenKinds.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp  Token.cpp
tools/: CMakeLists.txt
tools/dzieja-lexer/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/LexGen/: CMakeLists.txt  FiniteAutomaton.cpp  FiniteAutomaton.h  NFA.cpp  NFA.h  README.md  main.cpp
